# intro-sims

ising/: CMakeLists.txt  input.in  ising.cpp  ising.h  main.cpp  types.h
ising/inputs/: gen-input.sh  input.in
ising/src/: CMakeLists.txt  io.cpp  io.h  ising.cpp  ising.h  main.cpp  types.h
ising/src/hdf5-test/: CMakeLists.txt.test  io.cpp.test  io.h.test
molecular-dynamics/: Makefile  io.f90  kinds.f90  ljmd.f90  main.f90  mdsys.f90  physconst.f90  utils.f90
molecular-dynamics/inputs/: argon_108.inp  argon_2916.inp  argon_78732.inp
montecarlo/: Makefile  main.cpp  main.h  montecarlo.cpp  montecarlo.h  pi  pi.cpp  pi.h  utils.cpp  utils.h
warmup/: Makefile  main.cpp  main.h  readbin.cpp  warmup.cpp  warmup.h
